Fix fonts and dark mode when JS disabled

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -39,8 +39,8 @@
   }
 }
 
-/* @media (prefers-color-scheme: dark) {
-  :root {
+@media (prefers-color-scheme: dark) {
+  :root:not(.light) {
     --bg: #272727;
     --text: rgba(255, 255, 255, 0.8);
     --text-header: #fff;
@@ -53,7 +53,7 @@
     --info: rgba(255, 255, 255, 0.5);
     --bg-blockquote: #272727;
   }
-} */
+}
 
 body {
   background: var(--bg);
